Calender event pop-up duration added and alignment issue fixed

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -993,7 +993,7 @@ input:-webkit-autofill {
     }
     .content-wrapper-main-title {
       margin-bottom: 0px !important;
-      font-size: $font-size-13;
+      font-size: $font-size-10;
     }
   }
   .small-value {
